--- a/templates/repasses/listar.html
+++ b/templates/repasses/listar.html
@@ -127,7 +127,7 @@
                         <th>Fornecedor</th>
                         <th>Pedido</th>
                         <th>Valor Bruto</th>
-                        <th>Taxa ({{ "%.1f"|format(5.0) }}%)</th>
+                        <th>Taxa ({{ "%.1f"|format(taxa_plataforma) }}%)</th>
                         <th>Valor Líquido</th>
                         <th>Status</th>
                         <th>Data</th>
